content/style.css
body {
	overflow-y: scroll;
}

.conversation__header {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	padding: 1em;
	background-color: Menu;
	box-shadow: 0 0 1em ThreeDShadow;
	z-index: 2;
}

.conversation__main {
	max-width: 70em;
	padding: 3em 0.5em 0.5em;
	margin: 0 auto;
}

.conversation__subject {
	font-size: inherit;
	margin: 0;
}

.message {
	background-color: -moz-default-background-color;
	color: -moz-default-color;
	margin-bottom: 2px;
	box-shadow: 0 0 0.3em ThreeDShadow;
}

.message__body {
	border: 0;
	width: 100%;
}

.message__header,
.message__footer {
	padding: 0.5em;
}

.message__header {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.message__header > * {
	flex: 0 0 auto;
}

.message__header > .summary,
.message__header > .recipients {
	flex: 1 1 auto;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.summary,
.message.is-collapsed .message__body,
.message.is-collapsed .message__footer,
.message.is-collapsed .recipients {
	display: none;
}

.message.is-collapsed .summary {
	display: block;
}

.summary {
	opacity: 0.5;
}

.author {
	margin-right: 0.5em;
}

.author a:not(:last-child)::after,
.recipients a:not(:last-child)::after {
	content: ", ";
}

.icon {
	display: inline-block;
	fill: currentColor;
	height: 1.5em;
	vertical-align: -.4em;
}

.icon.is-active {
	color: #fcb040;
}

.tag {
	padding: 0.2em 0.3em;
	border-radius: 0.3em;
	margin-right: 0.2em;
	font-size: 90%;
}

.button {
	border: 1px solid transparent;
	background: none;
	cursor: pointer;
	border-radius: 2px;
	padding: 0.2em;
}

.button:hover,
.button:focus {
	border-color: ThreeDShadow;
	background-color: ButtonHighlight;
	transition: background-color 0.3s, border-color 0.3s;
}

.button:active {
	background-color: transparent;
	box-shadow: 0 0 0.5em ThreeDShadow inset;
}

.actions {
	position: relative;
}

.dropdown {
	display: none;
	position: absolute;
	top: 2em;
	right: 0;
	z-index: 1;
	background-color: -moz-Field;
	color: -moz-FieldText;
	min-width: 15em;
	border-radius: 0.4em;
	box-shadow: 0 0 1em ThreeDShadow;
	overflow: hidden;
}

.dropdown.is-expanded {
	display: block;
}

.dropdown-item {
	border: 0;
	background: none;
	display: block;
	min-width: 100%;
	text-align: left;
	padding: 0.2em 0.3em;
	white-space: nowrap;
	cursor: pointer;
}

.dropdown-item .icon {
	margin-right: 0.2em;
}

.dropdown-item:nth-child(2n) {
	background-color: -moz-OddTreeRow;
}

.dropdown-item:hover,
.dropdown-item:focus {
	background-color: -moz-CellHighlight;
	color: -moz-CellHighlightText;
}

.attachments {
	margin: 0;
	padding: 0;
}

.attachments li {
	display: block;
}

.attachment {
	padding: 0.1em;
	border-radius: 2px;
}

.attachment:focus {
	background-color: -moz-CellHighlight;
	color: -moz-CellHighlightText;
}

.alert {
	background-color: #d9edf7;
	padding: 0.5em;
}

.alert--success {
	background-color: #dff0d8;
}

.alert--warning {
	background-color: #fcf8e3;
}

.alert--error {
	background-color: #f2dede;
}

.alert .icon {
	font-size: 200%;
	vertical-align: middle;
}

